// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-auto-entrepreneur > ACRE 1`] = `
"auto-entrepreneur . cotisations et contributions: 112
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 110
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 26
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 3
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 22
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 48
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 110
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 21344
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 21344"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 2`] = `
"auto-entrepreneur . cotisations et contributions: 249
auto-entrepreneur . cotisations et contributions . CFP: 4
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 245
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 62
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 8
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 10
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 51
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 114
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 245
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 13
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 22988
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: 22988
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 3`] = `
"auto-entrepreneur . cotisations et contributions: 120
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 4
auto-entrepreneur . cotisations et contributions . cotisations: 111
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 26
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 3
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 22
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 48
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 111
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 21440
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 21440"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 4`] = `
"auto-entrepreneur . cotisations et contributions: 214
auto-entrepreneur . cotisations et contributions . CFP: 6
auto-entrepreneur . cotisations et contributions . TFC: 9
auto-entrepreneur . cotisations et contributions . cotisations: 199
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 47
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 20
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 39
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 86
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 199
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 22568
entreprise . chiffre d'affaires . service BIC: 22568
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 5`] = `
"auto-entrepreneur . cotisations et contributions: 201
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 198
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 47
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 20
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 39
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 86
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 198
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 22412
entreprise . chiffre d'affaires . service BIC: 22412
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 6`] = `
"auto-entrepreneur . cotisations et contributions: 201
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 198
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 47
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 20
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 39
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 86
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 198
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 22412
entreprise . chiffre d'affaires . service BIC: 22412
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 7`] = `
"auto-entrepreneur . cotisations et contributions: 168
auto-entrepreneur . cotisations et contributions . CFP: 3
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 165
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 39
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 5
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 17
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 33
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 72
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 165
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 30000
auto-entrepreneur . revenu . net . après impôt: 30000
entreprise . chiffre d'affaires: 32016
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 32016"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 1`] = `
"auto-entrepreneur . cotisations et contributions: 221
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 219
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 52
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 7
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 19
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 44
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 96
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 142
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 14
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 43
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 17
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 34
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 8
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 17348
auto-entrepreneur . revenu . net . après impôt: 17348
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 12000
entreprise . chiffre d'affaires . service BNC: 3000
entreprise . chiffre d'affaires . vente restauration hébergement: 5000"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 2`] = `
"auto-entrepreneur . cotisations et contributions: 312
auto-entrepreneur . cotisations et contributions . CFP: 4
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 307
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 72
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 10
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 31
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 61
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 133
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 307
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 8
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 41256
auto-entrepreneur . revenu . net . après impôt: 41256
entreprise . chiffre d'affaires: 45000
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 45000"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 3`] = `
"auto-entrepreneur . cotisations et contributions: 58
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 56
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 13
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 2
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 5
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 25
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 36
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 4
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 11
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 4
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 9
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 2
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 19304
auto-entrepreneur . revenu . net . après impôt: 19304
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 12000
entreprise . chiffre d'affaires . service BNC: 3000
entreprise . chiffre d'affaires . vente restauration hébergement: 5000"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 4`] = `
"auto-entrepreneur . cotisations et contributions: 167
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 165
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 39
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 5
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 15
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 33
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 73
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 106
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 33
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 13
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 26
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 17996
auto-entrepreneur . revenu . net . après impôt: 17996
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 12000
entreprise . chiffre d'affaires . service BNC: 3000
entreprise . chiffre d'affaires . vente restauration hébergement: 5000"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 1`] = `
"auto-entrepreneur . cotisations et contributions: 282
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 280
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 66
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 9
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 28
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 55
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 122
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 177
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 103
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 16616
auto-entrepreneur . revenu . net . après impôt: 16616
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 10000
entreprise . chiffre d'affaires . service BNC: 0
entreprise . chiffre d'affaires . vente restauration hébergement: 10000"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 2`] = `
"auto-entrepreneur . cotisations et contributions: 355
auto-entrepreneur . cotisations et contributions . CFP: 3
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 352
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 88
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 12
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 18
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 73
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 161
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 284
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 68
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 15740
auto-entrepreneur . revenu . net . après impôt: 15740
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 0
entreprise . chiffre d'affaires . service BNC: 13333
entreprise . chiffre d'affaires . vente restauration hébergement: 6667"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 3`] = `
"auto-entrepreneur . cotisations et contributions: 291
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 6
auto-entrepreneur . cotisations et contributions . cotisations: 280
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 66
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 9
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 28
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 55
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 122
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 177
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 103
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 16508
auto-entrepreneur . revenu . net . après impôt: 16508
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 10000
entreprise . chiffre d'affaires . service BNC: 0
entreprise . chiffre d'affaires . vente restauration hébergement: 10000"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 4`] = `
"auto-entrepreneur . cotisations et contributions: 726
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 720
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 173
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 23
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 60
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 145
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 319
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 353
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 213
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 154
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 21288
auto-entrepreneur . revenu . net . après impôt: 21288
entreprise . chiffre d'affaires: 30000
entreprise . chiffre d'affaires . service BIC: 20000
entreprise . chiffre d'affaires . service BNC: 10000
entreprise . chiffre d'affaires . vente restauration hébergement: 15000"
`;

exports[`calculate simulations-auto-entrepreneur > activités 1`] = `
"auto-entrepreneur . cotisations et contributions: 430
auto-entrepreneur . cotisations et contributions . CFP: 3
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 427
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 108
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 14
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 18
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 90
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 198
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 427
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 14840
auto-entrepreneur . revenu . net . après impôt: 14840
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: 20000
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > activités 2`] = `
"auto-entrepreneur . cotisations et contributions: 390
auto-entrepreneur . cotisations et contributions . CFP: 3
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 387
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 104
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 5
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 44
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 119
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 114
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: 387
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: 23
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 15320
auto-entrepreneur . revenu . net . après impôt: 15320
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: 20000
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > activités 3`] = `
"auto-entrepreneur . cotisations et contributions: 214
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 4
auto-entrepreneur . cotisations et contributions . cotisations: 205
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 48
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 21
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 40
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 89
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 205
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 17432
auto-entrepreneur . revenu . net . après impôt: 17432
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 20000"
`;

exports[`calculate simulations-auto-entrepreneur > activités 4`] = `
"auto-entrepreneur . cotisations et contributions: 366
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 8
auto-entrepreneur . cotisations et contributions . cotisations: 353
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 83
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 35
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 70
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 153
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 353
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 15608
auto-entrepreneur . revenu . net . après impôt: 15608
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 20000
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > activités 5`] = `
"auto-entrepreneur . cotisations et contributions: 207
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 205
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 48
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 21
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 40
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 89
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 205
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 17516
auto-entrepreneur . revenu . net . après impôt: 17516
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 20000"
`;

exports[`calculate simulations-auto-entrepreneur > activités 6`] = `
"auto-entrepreneur . cotisations et contributions: 356
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 353
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 83
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 35
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 70
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 153
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 353
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 15728
auto-entrepreneur . revenu . net . après impôt: 15728
entreprise . chiffre d'affaires: 20000
entreprise . chiffre d'affaires . service BIC: 20000
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > aides 1`] = `
"auto-entrepreneur . cotisations et contributions: 58
auto-entrepreneur . cotisations et contributions . CFP: 0
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 58
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 14
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 2
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 25
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 58
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 5000
auto-entrepreneur . revenu . net . après impôt: 5000
entreprise . chiffre d'affaires: 5696
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 5696"
`;

exports[`calculate simulations-auto-entrepreneur > aides 2`] = `
"auto-entrepreneur . cotisations et contributions: 591
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 585
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 138
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 18
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 59
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 116
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 254
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 585
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 50000
auto-entrepreneur . revenu . net . après impôt: 50000
entreprise . chiffre d'affaires: 57092
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 57092"
`;

exports[`calculate simulations-auto-entrepreneur > impôt sur le revenu 1`] = `
"auto-entrepreneur . cotisations et contributions: 725
auto-entrepreneur . cotisations et contributions . CFP: 6
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 719
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 181
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 24
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 29
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 151
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 334
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 719
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
auto-entrepreneur . revenu . impôt: 62
auto-entrepreneur . revenu . net: 25000
auto-entrepreneur . revenu . net . après impôt: 24256
entreprise . chiffre d'affaires: 33700
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: 33700
entreprise . chiffre d'affaires . vente restauration hébergement: null"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 1`] = `
"auto-entrepreneur . cotisations et contributions: 6
auto-entrepreneur . cotisations et contributions . CFP: 0
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 1
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 0
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 1
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 1
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 3
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 6
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 500
auto-entrepreneur . revenu . net . après impôt: 500
entreprise . chiffre d'affaires: 572
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 572"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 2`] = `
"auto-entrepreneur . cotisations et contributions: 12
auto-entrepreneur . cotisations et contributions . CFP: 0
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 12
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 3
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 0
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 1
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 2
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 5
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 12
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 1000
auto-entrepreneur . revenu . net . après impôt: 1000
entreprise . chiffre d'affaires: 1144
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 1144"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 3`] = `
"auto-entrepreneur . cotisations et contributions: 23
auto-entrepreneur . cotisations et contributions . CFP: 0
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 23
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 5
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 1
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 2
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 5
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 10
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 23
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 2000
auto-entrepreneur . revenu . net . après impôt: 2000
entreprise . chiffre d'affaires: 2276
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 2276"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 4`] = `
"auto-entrepreneur . cotisations et contributions: 58
auto-entrepreneur . cotisations et contributions . CFP: 0
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 58
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 14
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 2
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 6
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 11
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 25
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 58
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 5000
auto-entrepreneur . revenu . net . après impôt: 5000
entreprise . chiffre d'affaires: 5696
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 5696"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 5`] = `
"auto-entrepreneur . cotisations et contributions: 118
auto-entrepreneur . cotisations et contributions . CFP: 1
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 117
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 28
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 4
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 12
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 23
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 51
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 117
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 10000
auto-entrepreneur . revenu . net . après impôt: 10000
entreprise . chiffre d'affaires: 11416
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 11416"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 6`] = `
"auto-entrepreneur . cotisations et contributions: 236
auto-entrepreneur . cotisations et contributions . CFP: 2
auto-entrepreneur . cotisations et contributions . TFC: 0
auto-entrepreneur . cotisations et contributions . cotisations: 234
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 55
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 7
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 24
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 46
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 102
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 234
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 20000
auto-entrepreneur . revenu . net . après impôt: 20000
entreprise . chiffre d'affaires: 22832
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 22832"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 7`] = `
"auto-entrepreneur . cotisations et contributions: 591
auto-entrepreneur . cotisations et contributions . CFP: 5
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 585
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 138
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 18
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 59
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 116
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 254
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 585
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 50000
auto-entrepreneur . revenu . net . après impôt: 50000
entreprise . chiffre d'affaires: 57092
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 57092"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 8`] = `
"auto-entrepreneur . cotisations et contributions: 827
auto-entrepreneur . cotisations et contributions . CFP: 7
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 819
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 193
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 26
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 82
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 162
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 356
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 819
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 70000
auto-entrepreneur . revenu . net . après impôt: 70000
entreprise . chiffre d'affaires: 79924
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 79924"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 9`] = `
"auto-entrepreneur . cotisations et contributions: 1181
auto-entrepreneur . cotisations et contributions . CFP: 10
auto-entrepreneur . cotisations et contributions . TFC: 1
auto-entrepreneur . cotisations et contributions . cotisations: 1170
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 276
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 37
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 118
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 231
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 508
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 1170
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 0
auto-entrepreneur . revenu . net: 100000
auto-entrepreneur . revenu . net . après impôt: 100000
entreprise . chiffre d'affaires: 114172
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 114172"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 10`] = `
"auto-entrepreneur . cotisations et contributions: 11812
auto-entrepreneur . cotisations et contributions . CFP: 95
auto-entrepreneur . cotisations et contributions . TFC: 14
auto-entrepreneur . cotisations et contributions . cotisations: 11703
auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 2762
auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 369
auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 1176
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 2311
auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 5085
auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 11703
auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
auto-entrepreneur . revenu . impôt: 2433
auto-entrepreneur . revenu . net: 1000000
auto-entrepreneur . revenu . net . après impôt: 997567
entreprise . chiffre d'affaires: 1141744
entreprise . chiffre d'affaires . service BIC: null
entreprise . chiffre d'affaires . service BNC: null
entreprise . chiffre d'affaires . vente restauration hébergement: 1141744"
`;
